# Beardb

./: README.md  beardb.c  beardb.py  data  pyproject.toml  requirements.txt  setup.py  test.py
Beardb/: Bucket.py
EncodeGUI/windowsapp/: people.json
beardb/: .env  Beardb.py  Bucket.py  __init__.py  eg.py  key.key  test.py
beardb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
beardb/beardb.egg-info/: PKG-INFO  entry_points.txt
beardb/random_project/class/keys/: randomshit.key
projects/computers/: computers.json
server/class/: people.json  users.json
server/users/: users.json
src/Beardb/: Beardb.py  Bucket.py  Client.py  __init.py  __init__.py  key.key  tes.json  test.key  test.py
src/Beardb.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/Beardb/sodd/windowsapp/: people.bdb  users.bdb
src/Beardb/sodd/windowsapp/keys/: people.key  users.key
src/Beardb/testdb/windowsapp/: people.bdb
src/beardb/beardb.egg-info/: PKG-INFO  SOURCES.txt
src/beardb/random_project/class/: randomshit.bdb  randomshits.bdb
src/beardb/random_project/class/keys/: randomshits.key
tests/: TestBucket.py  api.py  beardb.py  test.py
tests/testdb/windowsapp/: people.json
