[project]
name = "Beardb"
version = "0.0.1"
authors = [
  { name="Teddy Oweh", email="teddy@teddyoweh.net" },
]
description = "A Local System Based JSON Database system "
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/teddyoweh/Beardb"
"Bug Tracker" = "https://github.com/teddyoweh/Beardb/issues"