[project]
name = "beardb"
version = "0.0.1"
authors = [
  {name = "Teddy Oweh"},
  {email = "teddyoweh@gmail.com"}
]
maintainers = [
  { name="Teddy Oweh", email="teddy@teddyoweh.net" }
]
description = "Database system implementing encrypted versions JSON of data. Easy to access, manage and deploy remotely"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
 "cryptography",
 "requests",

]
[project.urls]
"Homepage" = "https://github.com/teddyoweh/Beardb"
"Bug Tracker" = "https://github.com/teddyoweh/Beardb/issues"
"documentation" = "https://beardb.net"
 
[project.entry-points."beardb"]
beardb = "reader.__main__:main"